; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/survey/extr_surveyor.c_nn_surveyor_inprogress.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/survey/extr_surveyor.c_nn_surveyor_inprogress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_surveyor = type { i64 }

@NN_SURVEYOR_STATE_IDLE = common dso_local global i64 0, align 8
@NN_SURVEYOR_STATE_PASSIVE = common dso_local global i64 0, align 8
@NN_SURVEYOR_STATE_STOPPING = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nn_surveyor*)* @nn_surveyor_inprogress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nn_surveyor_inprogress(%struct.nn_surveyor* %0) #0 {
  %2 = alloca %struct.nn_surveyor*, align 8
  store %struct.nn_surveyor* %0, %struct.nn_surveyor** %2, align 8
  %3 = load %struct.nn_surveyor*, %struct.nn_surveyor** %2, align 8
  %4 = getelementptr inbounds %struct.nn_surveyor, %struct.nn_surveyor* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @NN_SURVEYOR_STATE_IDLE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %20, label %8

8:                                                ; preds = %1
  %9 = load %struct.nn_surveyor*, %struct.nn_surveyor** %2, align 8
  %10 = getelementptr inbounds %struct.nn_surveyor, %struct.nn_surveyor* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @NN_SURVEYOR_STATE_PASSIVE, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %20, label %14

14:                                               ; preds = %8
  %15 = load %struct.nn_surveyor*, %struct.nn_surveyor** %2, align 8
  %16 = getelementptr inbounds %struct.nn_surveyor, %struct.nn_surveyor* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @NN_SURVEYOR_STATE_STOPPING, align 8
  %19 = icmp eq i64 %17, %18
  br label %20

20:                                               ; preds = %14, %8, %1
  %21 = phi i1 [ true, %8 ], [ true, %1 ], [ %19, %14 ]
  %22 = zext i1 %21 to i64
  %23 = select i1 %21, i32 0, i32 1
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
